--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "scribe-audio-resource",
   "displayName": ".",
   "description": "",
+  "publisher": "bridgeconn",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.89.0"
+    "vscode": "^1.86.0"
   },
   "categories": [
     "Other"
@@ -28,14 +29,21 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.89.0",
+    "@codex-extensions/resource-manager-types": "^1.0.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/vscode": "^1.89.0",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
     "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.3.9"
+    "@vscode/test-electron": "^2.3.9",
+    "eslint": "^8.57.0",
+    "typescript": "^5.4.5"
+  },
+  "extensionDependencies": [
+    "sevenx-codex.codex-resources"
+  ],
+  "dependencies": {
+    "moment": "^2.30.1"
   }
 }
