temporary resource pane open on command for testing until the bug fix

--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
       {
         "command": "scribe-audio-resource.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "scribe-audio-resource.openAudioReferencePane",
+        "title": "Open Scribe Audio Reference Pane",
+        "category": "ScribeAudio"
       }
     ]
   },
