--- a/src/webview/package.json
+++ b/src/webview/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/vscode-webview": "^1.57.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
