--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "@vscode/test-electron": "^2.3.9",
     "eslint": "^8.57.0",
     "prettier": "3.2.5",
-    "typescript": "^5.4.5",
     "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   },
@@ -67,6 +67,7 @@
   ],
   "dependencies": {
     "@vscode/webview-ui-toolkit": "^1.4.0",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "usfm-grammar": "^2.3.1"
   }
 }
