--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
         "command": "scribe-audio-resource.openAudioReferencePane",
         "title": "Open Scribe Audio Reference Pane",
         "category": "ScribeAudio"
+      },
+      {
+        "command": "scribe-audio-resource.changeBCReference",
+        "title": "Change Book Chapter Reference",
+        "category": "ScribeAudio"
       }
     ]
   },
