--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "scribe-audio-resource",
-  "displayName": ".",
+  "displayName": "Scribe Audio Resource",
   "description": "",
   "publisher": "bridgeconn",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "engines": {
     "node": ">=18.17.0",
     "vscode": "^1.85.0"
@@ -21,6 +21,10 @@
     "onStartupFinished"
   ],
   "main": "./out/extension.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Bridgeconn/audio-resource-extension"
+  },
   "contributes": {
     "commands": [
       {
