--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Upload VSIX
         uses: actions/upload-artifact@v2
         with:
-          name: audio-recorder
+          name: audio-resource
           path: './*.vsix'
 
   release:
